--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
     const candidates = [
         { name: "Abelardo de la Espriella", party: "Derecha Radical", color: "#2d3436", x: 95, y: 5, trayectoria: "Realidad: Abogado litigante. Nunca ha tenido cargos públicos. Defiende la reducción extrema del Estado.", promesas: "Propone: Cerrar 13 ministerios, despedir a miles de funcionarios y eliminar impuestos." },
         { name: "Iván Cepeda", party: "Pacto Histórico", color: "#f1c40f", x: 5, y: 95, trayectoria: "Realidad: Autor de la Ley de Víctimas y defensor de los Acuerdos de Paz. coautor de la iniciativa legislativa en pro del Matrimonio igualitario y reconocimiento de familias diversas.", promesas: "Propone: Reforma agraria (entregar tierras), Asamblea Constituyente y Paz Total." },
-        { name: "Paloma Valencia", party: "Centro Democrático", color: "#2d3436", x: 85, y: 15, trayectoria: "Realidad: Senadora de oposición. Votó en contra del Acuerdo de Escazú. Autora de leyes para el agro (Panela) y Estado Contigo (: programa de subsidios y acompañamiento para mujeres cabeza de hogar)", promesas: "Propone: Seguridad Democrática 2.0, bonos para colegios privados y libertad económica." },
+        { name: "Paloma Valencia", party: "Centro Democrático", color: "#2d3436", x: 85, y: 15, trayectoria: "Realidad: Senadora de oposición. Votó en contra del Acuerdo de Escazú. Autora de leyes para el agro (Panela) y Estado Contigo (programa de subsidios y acompañamiento para mujeres cabeza de hogar)", promesas: "Propone: Seguridad Democrática 2.0, bonos para colegios privados y libertad económica." },
         { name: "Vicky Dávila", party: "Independiente", color: "#0984e3", x: 80, y: 25, trayectoria: "Realidad: Periodista. Se ha dedicado a denunciar escándalos de corrupción del gobierno actual.", promesas: "Propone: Un bloque de búsqueda contra corruptos y fortalecer la alianza con EE.UU." },
         { name: "Gustavo Bolívar", party: "Pacto Histórico", color: "#e74c3c", x: 10, y: 90, trayectoria: "Realidad: Exsenador. Promovió la legalización del cannabis y subsidios al agua.", promesas: "Propone: Educación universitaria gratuita para todos y profundizar las reformas sociales." },
         { name: "Claudia López", party: "Verde / Centro", color: "#00b894", x: 40, y: 70, trayectoria: "Realidad: Exalcaldesa de Bogotá. Construyó el Sistema de Cuidado y contrató el Metro.", promesas: "Propone: Enfocarse en 'hacer y no hablar', seguridad local y obras públicas." },
@@ -609,4 +609,5 @@
 </script>
 
 </body>
+
 </html>
